Fix clipping more element on mobile

--- a/styling.css
+++ b/styling.css
@@ -131,6 +131,7 @@ body {
 
 .announcementPiece > p {
     font-size: 1.25rem;
+    margin-bottom: 0;
 }
 
 .announcementTitle {
